# prayercli

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  README.txt
.cache/clangd/index/: abi_macros.hpp.C44613944B137A02.idx  adl_serializer.hpp.757EF3266E3229DB.idx  begin.hpp.3A3714466964E860.idx  binary_reader.hpp.DECD43B64EC1E325.idx  binary_writer.hpp.595DFC19CC8D5A61.idx  byte_container_with_subtype.hpp.4FB946C0DA2A66BA.idx  commandparsing.cpp.57165BFFFDAF357D.idx  commandparsing.h.31F24E5A89D2E6CE.idx  cpp_future.hpp.B885BF1415CCBFE4.idx  detected.hpp.C32F06845B592E26.idx  end.hpp.ECBF8F94D5916F00.idx  exceptions.hpp.6658387B2E418774.idx  from_json.hpp.7AE17E7D0C94B420.idx  hash.hpp.F2F54302C23665D1.idx  hedley.hpp.7C08DD1BF9A077A3.idx  hedley_undef.hpp.563C8AA2E6803F5C.idx  identity_tag.hpp.113C485546C9826A.idx  input_adapters.hpp.5273A58C49250FEF.idx  internal_iterator.hpp.E857440FA4587168.idx  is_sax.hpp.7F861AFA234EDAD5.idx  iter_impl.hpp.44A38DE3E14B0EC7.idx  iteration_proxy.hpp.FB23DA1E8548A018.idx  iterator_traits.hpp.5AA48149AC0E5BDE.idx  json.hpp.BE239DCC327150EC.idx  json_custom_base_class.hpp.E93FFE115CE82103.idx  json_fwd.hpp.5A73ADAB7C55BBCF.idx  json_pointer.hpp.CA185BB0E6F609F9.idx  json_ref.hpp.81B9791A709FC8FF.idx  json_reverse_iterator.hpp.B418FC833B998D86.idx  json_sax.hpp.46FD4FD25246CEE2.idx  lexer.hpp.1993C76F68AD5251.idx  main.cpp.4417E2B1BD1CA019.idx  (+19 more)
include/: audioplayer.h  audioplayer.hpp  commandparsing.h  commandparsing.hpp  prayerlogic.h  prayerlogic.hpp
src/: audioplayer.cpp  commandparsing.cpp  fetchdata.py  main.cpp  prayerlogic.cpp
